Fixed alignment of textbox.

--- a/src/app/grocery-form/grocery-form.component.css
+++ b/src/app/grocery-form/grocery-form.component.css
@@ -4,9 +4,14 @@
 .add-btn {
     background-color:rgb(235, 50, 17);
     border-color: rgb(235, 50, 17);
-    width: 80%;
+    width: 90%;
+    max-width: 400px;
+    margin: 0 auto;
+    
 }
 
 .text-box {
-    width: 80%;
+    width: 90%;
+    max-width: 400px;
+    margin: 0 auto;
 }
